[gd_scene load_steps=17 format=3 uid="uid://d0teyvnsjhmux"]

[ext_resource type="PackedScene" uid="uid://cpfytprhd24ow" path="res://bg.tscn" id="1_ihq3p"]
[ext_resource type="PackedScene" uid="uid://wy1eg3kmeqq7" path="res://pause.tscn" id="1_q1rts"]
[ext_resource type="PackedScene" uid="uid://v3pc2y7lhn1w" path="res://result_screen.tscn" id="3_w720u"]
[ext_resource type="Script" uid="uid://jy312ljf0dr8" path="res://combat_manager.gd" id="4_0nq41"]
[ext_resource type="PackedScene" uid="uid://b47gfxy22e6n2" path="res://combat_summary.tscn" id="5_5nd4k"]
[ext_resource type="Script" uid="uid://dtx2b3fd5prkl" path="res://character_definition.gd" id="6_ipiyh"]
[ext_resource type="Resource" uid="uid://baiyj43bn6b1k" path="res://character_definitions/rie.tres" id="7_51m7k"]
[ext_resource type="Resource" uid="uid://ddns1s6uuyfgc" path="res://enemy_layouts/postjam_balance_1_layouts.tres" id="7_ntw4x"]
[ext_resource type="Script" uid="uid://dpq7fbl6dtbdd" path="res://shop_manager.gd" id="8_efko3"]
[ext_resource type="Script" uid="uid://bw07bfnlqx2ud" path="res://team_manager.gd" id="9_o3mlt"]
[ext_resource type="Script" uid="uid://33x87s58a4er" path="res://items.gd" id="10_eetyq"]
[ext_resource type="PackedScene" uid="uid://d2rrv6nlpencx" path="res://debug_menu.tscn" id="10_sb6nl"]
[ext_resource type="Script" uid="uid://b6fywb3xwv3i8" path="res://character_slots.gd" id="12_y3foa"]
[ext_resource type="PackedScene" uid="uid://mvolvkvd21yr" path="res://character_tooltip.tscn" id="13_4h68e"]
[ext_resource type="PackedScene" uid="uid://bb02d6qe3f5go" path="res://sell.tscn" id="13_cmt5l"]
[ext_resource type="PackedScene" uid="uid://b70hwns4rlfpw" path="res://player_state_ui.tscn" id="13_y2f8g"]

[node name="Main" type="Node"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" parent="Control" instance=ExtResource("1_ihq3p")]
scale = Vector2(0.66, 0.66)

[node name="CombatManager" type="Node" parent="." node_paths=PackedStringArray("character_container", "result_screen", "combat_summary", "team_manager", "shop_manager", "slots")]
script = ExtResource("4_0nq41")
character_container = NodePath("CharacterContainer")
result_screen = NodePath("../ResultScreen")
combat_summary = NodePath("CombatSummary")
team_manager = NodePath("../TeamManager")
shop_manager = NodePath("../ShopManager")
slots = NodePath("../CharacterSlots")
win_reward = 5
lose_reward = 5
draw_reward = 5

[node name="CharacterContainer" type="Control" parent="CombatManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CombatSummary" parent="CombatManager" instance=ExtResource("5_5nd4k")]
visible = false

[node name="TeamManager" type="Node" parent="." node_paths=PackedStringArray("character_container", "slots")]
script = ExtResource("9_o3mlt")
initial_player_team = Array[ExtResource("6_ipiyh")]([ExtResource("7_51m7k")])
enemy_layouts = ExtResource("7_ntw4x")
test_character = ExtResource("7_51m7k")
character_container = NodePath("../CharacterContainer")
slots = NodePath("../CharacterSlots")

[node name="ShopManager" type="Node" parent="." node_paths=PackedStringArray("shop_ui", "combat_manager", "shop_slot_container", "item_slot_container", "character_container", "item_container", "reroll_button")]
script = ExtResource("8_efko3")
shop_ui = NodePath("ShopUI")
combat_manager = NodePath("../CombatManager")
buy_price = 4
shop_slot_container = NodePath("ShopSlots/CharacterSlotsContainer")
item_slot_container = NodePath("ShopSlots/ItemSlotsContainer")
character_container = NodePath("../CharacterContainer")
item_container = NodePath("ShopItemContainer")
reroll_button = NodePath("ShopUI/RerollButton")
starting_money = 10

[node name="ShopUI" type="Control" parent="ShopManager"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ShopManager/ShopUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = 238.0
offset_right = 55.5
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Combat"

[node name="RerollButton" type="Button" parent="ShopManager/ShopUI"]
layout_mode = 2
offset_left = -600.0
offset_top = 256.0
offset_right = -400.0
offset_bottom = 287.0
text = "Reroll: $x"

[node name="ShopSlots" type="Control" parent="ShopManager"]
z_index = -1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterSlotsContainer" type="HBoxContainer" parent="ShopManager/ShopSlots"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = -600.0
offset_right = -400.0
theme_override_constants/separation = 100
alignment = 1

[node name="ItemSlotsContainer" type="HBoxContainer" parent="ShopManager/ShopSlots"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = -322.0
offset_right = -122.0
theme_override_constants/separation = 100
alignment = 1

[node name="ShopItemContainer" type="Control" parent="ShopManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugMenu" parent="." node_paths=PackedStringArray("team_manager") instance=ExtResource("10_sb6nl")]
visible = false
team_manager = NodePath("../TeamManager")

[node name="ItemSlots" type="Node" parent="." node_paths=PackedStringArray("item_slots_container", "items_container")]
script = ExtResource("10_eetyq")
item_slots_container = NodePath("Items/ItemSlotsContainer")
items_container = NodePath("ItemContainer")

[node name="Items" type="Control" parent="ItemSlots"]
z_index = -1
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 80.0
offset_bottom = 80.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="ItemSlotsContainer" type="HBoxContainer" parent="ItemSlots/Items"]
layout_direction = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="ItemContainer" type="Control" parent="ItemSlots"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterSlots" type="Node" parent="." node_paths=PackedStringArray("player_slot_container", "enemy_slot_container")]
script = ExtResource("12_y3foa")
player_slot_container = NodePath("Team/HBoxContainer")
enemy_slot_container = NodePath("EnemyTeam/HBoxContainer")

[node name="Team" type="Control" parent="CharacterSlots"]
z_index = -1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSlots/Team"]
layout_direction = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 120.0
offset_right = 620.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="EnemyTeam" type="Control" parent="CharacterSlots"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSlots/EnemyTeam"]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 120.0
offset_right = 620.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="PlayerStateUI" parent="." instance=ExtResource("13_y2f8g")]

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Sell" parent="Control2" instance=ExtResource("13_cmt5l")]
layout_mode = 1
offset_left = -80.0
offset_top = 252.0
offset_right = -80.0
offset_bottom = 252.0

[node name="CharacterContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharTooltipParent" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CharacterTooltip" parent="CharTooltipParent" node_paths=PackedStringArray("char_tooltip_parent") instance=ExtResource("13_4h68e")]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -58.0
offset_right = 268.0
offset_bottom = 58.0
grow_vertical = 2
char_tooltip_parent = NodePath("..")

[node name="ResultScreen" parent="." instance=ExtResource("3_w720u")]
visible = false

[node name="Pause" parent="." instance=ExtResource("1_q1rts")]
process_mode = 3
visible = false
z_index = 10

[connection signal="continue_button_pressed" from="CombatManager/CombatSummary" to="CombatManager" method="_on_combat_summary_continue_button_pressed"]
[connection signal="pressed" from="ShopManager/ShopUI/Button" to="ShopManager" method="_on_button_pressed"]
[connection signal="pressed" from="ShopManager/ShopUI/RerollButton" to="ShopManager" method="_on_reroll_button_pressed"]
